Updated all chat classes to use intelligent localization
Fixed an error with factions
Added the Russian language
Added the French language

Fixed the request command language string
Removed the temporary cwc command contribution
Added OnConsoleRun method for commands
Added OnConsoleRun method to PlySetGroup (example)
Made item and blueprint names and descriptions translatable
Added translatability of the weaponselect plugin

Fixed not being able to get past the character creation screen
Traits are now fully functional as a system
Can set max_trait_points to 0 to disable traits
Updated the attributes screen in character creation (first pass)
Slightly adjusted distance between top tab menu items and lower ones
Fixed a bug where tab menu buttons clipped the text inside them
Updated tab menu items to use proper markup tooltips
Added translatable character model tooltip
Updated default tooltip text font to make it look nicer
Added extra language strings to center text in HL2RP

Added .traits as an option for HasObjectAccess so classes, or business items can require specific traits
Replaced all instances of seperate with separate (my life is a lie)

Added Swedish translations (thanks Aberidius!)
Fixed an English translation error (connected from instead of connected to)
Fixed PermaKill mode (needs properly re-testing)
Updated Directory to use language translations
Updated some Directory pages to use proper CSS formatting
Made plugin and schema descriptions (and names) translatable

04/09/2017 (Clockwork)
Proper attribute language description for attributes
Removed sh_fixes.lua file as it's no longer used in this update
Localized Stamina attribute in the stamina plugin
Moved Stamina plugin back to HL2RP because it's stupid that it was ever in the framework, the schema and its plugins should decide what attributes exist

04/09/2017 (HL2RP)
Added descriptions for all attributes to the language file
Added proper icons for all attributes