@@ -44,7 +44,5 @@ Clockwork.config:ShareKey("draw_intro_bars");
 Clockwork.config:ShareKey("show_business");
 Clockwork.config:ShareKey("chat_multiplier");
 Clockwork.config:ShareKey("enable_looc_icons");
-
 Clockwork.config:ShareKey("description_crafting");
 Clockwork.config:ShareKey("crafting_menu_enabled");
-Clockwork.config:ShareKey("name_crafting");
